# ThreeInRow

./: .gitmodules  CMakeLists.txt  README.md  development-manual.md
docs/: development-manual.md
src/threeinrow/: main.cpp
